<resources>
    <string name="app_name">mazandaran</string>
    <string name="tarikhche_title">گذري بر فرهنگ مازندران</string>
    <string name="tarikhche_matn">
        اقوام ايراني از آن جا كه به تمدن ريشه دار و دير سالِ سرزمين شان گره خورده اند ، داراي فرهنگ غني هستند .\n
مجموعه آداب و رسوم ، رفتارهاي جمعي ، باورها و .... كه با كنش هاي كوچك و بزرگ در زمان هاي خاص و پراكنده بروز مي كند ، فرهنگ اقوام ايران زمين را تشكيل مي دهد كه عمدتاً اشتراكاتي به خاطر هم ريشه بودن ، تعاملات و تبادلات فكري ، سياسي ، اقتصادي و پيوندهاي نسبي و سببي ، با يكديگر دارند .\n
        به ويژه اين كه همه ي آن ها اعم از كرد ، لر ، بلوچ ، مازندراني ، گيلاني ، خراساني و فارس ، ايراني اند و از يك مليت و سرزمين هستند .\n
        و به طور خاص سرچشمه هاي ديني و اعتقادي همه ي اين اقوام ريشه در يك جريان فكري دارد كه همه ي آن ها را به يكديگر گره مي زند . بديهي است  كه آبشخور آداب ، رسوم ، رفتارهاي جمعي و ... ( فرهنگ ) ، اعتقادات آييني است . \n
        ريشه هاي فكري يك ملت كه جاري در باورهاي ديني آن هاست ، خط و ربط رفتارهاي آن ها را رقم مي زند . پس اگر فرهنگ اقوام ايراني به يكديگر نزديك يا شبيه اند به خاطر سرچشمه ي  مشترك فكري و آييني آن هاست و تفاوت هايش هم به شرايط محيطي ، اقليمي و روي دادهاي تاريخي ، وجود انسان هاي تاثيرگذار در سير روزگاران ، جنگ و گريزها و .... بر مي گردد .\n
        مازندران سرزميني است كه هم فرهنگ غني دارد . \n
        چرا كه تمدني هم پاي ساير اقوام براي خود رقم زده است و هم شرايط مساعد به واسطه ي وجود و فراواني آب و وجود خاك حاصلخيز ، براي زندگي دارا بوده است .\n
        از اين رو بديهي است كه اشتراكات و تفاوت هاي فرهنگي هم با ساير اقوام ايراني به دلايل فوق الذكر داشته باشد .\n
        گستره ي جغرافيايي مازندران از سر حدات شرق گيلان در لاهيجان تاآن سوي گرگان قديم و دامنه ي جنوبي البرز مشترك با استان هاي قزوين ، تهران و سمنان و تا كناره هاي آرام درياي پهناور مازندران ، سرشار از تنوع زيستي ، جولان تفكرات و باورها ، رفتارهاي جمعي و فردي بر محور آداب ، سنن و هنر و مردمي است كه با لهجه هاي مختلف بر واحد زباني مشترك و تفاوت ها و اشتراكات رسومي و اعتقادي به خاطر دو محيط كوهستاني و جلگه اي ، روزگار مي گذرانند .\n
        هر يك از مناطق كوهستاني و جلگه اي مازندران كه امروزه به خاطر تقسيمات جغرافيايي و تفكرات حساب نشده محدود شده است به 23 هزار واندي كيلومتر مربع ، رفتارها و آداب متمايز و متفاوت و نزديك و شبيه به همي را بر اساس اعتقادات آئيني مشترك ، حفظ مي كنند .\n
        همين اقيلم و جغرافياي متفاوت ، دخالت عظيمي در ايجاد تنوع لهجه ها كرده است .\n
        تا جايي كه شما در ميان مردم جلگه به واژه ها ، لغات و اصطلاحاتي بر مي خوريد كه در ميان مردم كوهستان آن را نمي شنويد و اين بر اثر همان تنوع زيستي متفاوت كوه و جلگه است و عكس آن هم صادق مي باشد . \n
        اما آنچه در اين فرهنگ گسترده ، كهن ، بومي و غني باعث تأمل هر محقق و ماندگاري اصل فرهنگي آن مي شود ، حضور باورهاي عميق در ذره ي آداب و رسوم ها و رفتارها و كنش هاي اجتماعي و فردي است .\n
        تنها به دو  مورد در اين اندك سطور به عنوان نمونه بسنده مي كنم كه بگوييم به طور مثال : مازندراني ها هنگام گرگ و ميش غروب و صبح - كه موقع اذان  و اندكي قبل و بعد آن است آب خنك نمي نوشند ، به ويژه آنهايي كه فرزند در خاك دارند . اول اين كه در اصطلاح مازندراني به اين زمان « بي وقتي » مي گويند ، يعني نه به وقت روز مربوط است و نه به وقت شب . \n
        دوم اين كه باور دارند در اين زمان از شبانه روز ، روح مرده ها آزادند و براي رفع تشنگي به خانه ي وابستگان درجه ي اول خود مي روند و اگر در اين زمان ، توسط زنده ها آب نوشيده شود مثل اين است كه سهم آب آن ها را نوشيده اند و تشنگي براي آن ها مي ماند و اگر بخواهند چنين بكنند ( يعني آبي بنوشند ) همه را سر نمي كشد و به طرف پشت سر مي ريزند تا سهمي هم نصيب مرده ها شود  .\n
        و يا اعتقاد آن ها به اين مهم كه اگر بچه اي بيماري سرخجه گرفته نبايد آدم ناپاك او را ببيند كه در اين صورت منجر به تب و شدت بيماري و مرگ بيمار خواهد شد . و از نگاه آن ها ناپاك كسي است كه طهارت خود را رعايت نكند و نتوانند نماز بخواند .\n
        اين نكته اهميت پاك بودن در نگاه مازندراني ها را مي رساند و صدها مثال ديگر از اين دست از باور به آل و حضورش در زندگي انسان و تسخير آن گرفته تا خواندن خروس رو به قبله و آمدن مهمان سرزده كه حبيب خدا است . و اگر قوتي در خانه نباشد ، با تمام وجود اعتقاد دارند كه مهمانِ روزي رِ خدا وِنه همراه يارنِه ( روزي مهمان را خدا به همراه مهمان مي آورد . )\n
        ضرورتاًشرح مختصري مي دهم از موسيقي مازندران كه سرچشمه هاي ظهور آن :\n
        * عشق ( مجازي و الهي )– عمدتاً مجازي بر محور داستان هاي عاشقانه ي مشهور مثل طالبا و عاشقانه هاي فردي چون (عامي دتر جان ) است كه سرشار از باورهاي ديني در متن خود هستند .\n
        * اهل بيت ( مثل اميري خواني كه عمده ي رباعيات آن بر محور عشق به حضرت امير (ع) استوار است و در دل خود پرسش و پاسخ ديني و اسلامي هم دارد ) يا سلسله الذهب در موسيقي هرايي مازندراني كه مربوط به اما رضا (ع) ست .\n
        * حزن ( شامل تصنيف هاي فرواني است كه ملودي هاي دوري كوتاهي دارند و عمدتاً بر جدايي يا شكست در عشق سوار هستند ) و اين تصنيف ها هم پر از باورهاي آئيني هستند .\n
        *شادي ( شامل تصيف هاي فراواني است ، كه ملودي هاي دوري كوتاهي دارند و عمدتاً بر طنز و وصل استوارند و براي جشن هاي عروسي و اعياد خوانده مي شوند ) و حتي در اين طيف از موسيقي هم رگه هاي باورهاي ديني به مناسبت اتفاق در متن شعر و موسيقي ، مشاهده مي شود .\n
        دسته اي ديگر از مصاديق فرهنگ غني مازندراني ، رفتارهاي اجتماعي خرد و كلان مردم در زندگي روزمره است كه در آداب و رسوم ، اعياد و جشن ها و سوگواري ها حتي شب نشيني هاي شان تجلي پيدا مي كند .\n
        •          جشن خرمن كه در حقيقت مراسم شكر گذاري برداشت محصول است در پايان فصل درو كه نشان گر مصداقي از رفتارهاي جمعي است كه برمحور باورهاي آئيني مردم اين سرزمين استوار است .\n
        •          دعاي باران ( شِرون يا شِلون ) تجلي گاهي از اعتقادات آئيني در طلب آب از درگاه ايزدي است كه عمدتاً در كنار بقعه ي امام زاده ها كه  به اهل بيت (ع) متصل هستند ، با پخش آشِ نذري و بر پائيِ مراسم دعا و نيايشِ دسته جمعي انجام مي گيرد .\n
        •          عيد مردگان يا تير ماه سيزده شو كه به مناسبت ياد كرد از مردگان ، هر ساله در يك روز خاص و ثابت برگزار مي شود و در اين روز با پوشيدن لباس هاي نو و پختن غذا و خيرات به نيت و رسيدن ثواب به مردگان و رفتن بر سر قبور آن ها به صورت دسته جمعي تجلي مي يابد .\n
        •          حضور نوروز خوان به عنوان پيك رسيدن بهار در محله ها با ساز و موسيقيِ محلي و سردادن صدا به آوازي خوش با اشعاري كه در مدح رسول و ائمه ي اطهار و وصف طبيعت است و دادن مژدگاني به آن ها از طرف خانواده ها تجلي ديگري از رفتارهاي اجتماعي مردم مازندران بر محور باورهاي ديني است .\n
        •          مِهر كردن ، تاكيدي است بر يادآوري نام خدا در كارهاي روزمره كه بر گرفته از آيين كهن مِهر پرستي است و بعد از ورود اسلام تجلي بيشتري پيدا كرده است .\n
        به ويژه اين تاكيد در برخي كارها بيشتر و محكم تر است . مثل سرو كار داشتن با آبِ جوش و غذاي داغ هنگام جا به جايي يا سر زير كردن آن ها در ظرفي ديگر و يا رفتن به صحرا در شب چرا كه در اين هر دو مورد به حضور  جِن باور دارند و با تاكيد بر مهر كردن و ذكر نام خدا مي خواهند از آزار رساندن به آن ها و آزار ديدن از طرف ها به قصد انتقام ، بگريزند .\n
        •          نشست هاي شبانه – شُونيشت – شب نشيني و نقل افسانه ها و حكايت هاي پند آموز براي جوان ترها و طرح چيستان ها كه بخش اعظمي از آن  پاسخ هاي ديني دارند و خود ، نمايه ي ديگري از مصاديق فرهنگي مازندران است كه بر باورهاي ديني و آئيني تكيه دارند .\n
        •          وجود سقانفارها در حياطِ تكايا و حسينه ها ، كه از  عشق و ارادت آن ها به باب الحوائج اباالفضل العباس حكايت مي كند و نكته ي جالب تر آن كه طرح و نقشِ نقاشي هاي روي ستون ها و سقف هاي اين سقانفارها نشان دهنده ي عُمق باور آن ها به قيامت ، معاد ، اهل بيت و .... است كه جز با ديدن آن ها نمي توان بر اين مصداق ها به صورت زنده صحه گذاشت .\n
        •          وجود امام زادگان و معماري زيباي بناهاي تاريخي آن ها ، نشان مي دهد كه مردم اين سرزمين اگر هنري در دست داشتند در خدمت اعتقادات و ارادت خود به اهل بيت از آن بهره جستند .\n
</string>
    <string name="marasem">آداب و رسوم مازندران</string>
    <string name="marasem_title1">نوروز خوانی</string>
    <string name="marasem_matn1">
        نوروز خوانان معمولاً پانزده روز قبل از فرا رسیدن عید نوروز به داخل روستاها می‌آیند و با خواندن اشعار در مدح امامان ترانه‌های محلی، طلیعه سال نو را به آنان مژده می‌دهند.\n
        نوروز خوانان چند نفر هستند که یک نفر اشعار را می‌خواند، یک نفر ساز می‌زند، نفر دیگر که به آن کوله کش (بارکش) می‌گویند به در خانه‌های مردم می‌رود و می‌خواند:\n
        باد بِهارون بِیَمو / نِئروز سِلطون بِیَمو\n
        مژده هادین دوستان رِ / گل بیَمو گلستون رِ\n
        بهار آمد بهار آمد خِش آمد / علی با ذولفقار آمد، خوش آمد\n
        نِئروزتان نِئروز دیگر / شِه ما رِ سال نِئ بووئه مِوارِک\n
        صاحب خانه نیز با دادن پول، شیرینی، گردو، تخم مرغ و نخود، و کشمش از آنان پذیرایی می‌کند.\n
    </string>
    <string name="marasem_title2">چهارشنبه سوری</string>
    <string name="marasem_matn2">
        از مراسم به جامانده در سرزمین‌های آریایی (ایران و مازندران)، چهارشنبه سوری است که در پایان چهارشنبه هر سال برگزار می‌شود. صبح روز چهارشنبه آش هفت ترشی، درست می‌کنند.\n
        آشی که هفت نوع ترشی مانند آب نارنج، آب لیمو، آب انار، سرکه، گوجه سبز، و آب ازگیل در آن می‌ریزند و بعد از آماده شدن بین همسایه‌ها پخش می‌کنند غروب روز می‌خوانند با آرزوی شادی و خوشی برای خود و خانواده خود از روی آتش می‌پرند. آنها می‌خوانند: \n
        چهارشنبه سوری کمی پارسال دسوری کمی، امسال دسوری کمی\n
    </string>
    <string name="marasem_title3">عید نوروز</string>
    <string name="marasem_matn3">
        هنگام تحویل سال افراد خانواده دور سفره هفت سین که با ظرافت و سلیقه خانم خانه چیده شده می‌نشینند و در حالیکه پدر خانواده دعای تحویل می‌خواند منتظر سال نو می‌شوند.\n
        در گذشته که امکانات ارتباطی مانند رادیو و تلویزیون نبود با تیراندازی یا گفتن اذان سال جدید را به همه اعلام می‌داشتند. \n
        بعد از این که سال نو شد کسی که به عنوان مادرمه انتخاب شده با مجمعی که در ان قرآن، آیینه، اب، سبزه و شاخه‌های سبز جوان قرار دارد وارد خانه می‌شود چهارگوشه اتاق‌ها را آب می‌پاشد قرآن را کنار سفره هفت سین می‌گذارد و شاخه‌های سبز (درخت آلوچه) را به این نیت که سال سرسبز و خوش و خرمی برای خانواده باشد، جلوی در اتاق آویزان یا روی طاقچه اتاق می‌گذارد.\n
        در این روز مادر خانه، غذای عید، سبزی پلو با مرغ یا گوشت درست می‌کند.\n
        علاوه بر آن غذایی به عنوان خیرات برای اموات می‌پزند و بین مردم پخش می‌کنند. \n
        در غروب شب اول سال به این اعتقاد که چراغ خانه آن‌ها همیشه روشن و نورانی باشد، به سر در خانه‌ها شمع یا شعله آتش آویزان می‌کنند.\n
    </string>
    <string name="marasem_title4">آرش کمانگیر</string>
    <string name="marasem_matn4">
        در برخی دیگر از نقاط مازندران نیز آن را منسوب به پرتاب تیر آرش از دماوند به سوی ملک توران که موجب پایان بخشیدن به جنگ‌های چند ساله ایران و توران گردید می‌دانند و آن را در ۱۲ تا ۱۵ ماه ابان (بسته به اعتقادات محلی) و همین‌طور بنابر تقویم مازندرانی یا تقویم خورشیدی جشن می‌گیرند، شایان ذکر است که تیرما سیزده شو بسیار پابرجاست و از اهمیت ویژه‌ای برخوردار است و هرگز فراموش شدنی نیست هرچند در مورد آن اختلافات زیادی وجود دارد.\n
    </string>
    <string name="marasem_title5">آیین سنتی ۲۶ عید ماه</string>
    <string name="marasem_matn5">
        آیین ویژه سنتی ۲۶ عید ماه طبری هر سال در تاریخ ۲۸ تیرماه شمسی در بیشتر روستاهای استان برگزار می‌شود.\n
        در روستای امامزاده حسن سوادکوه این مراسم با آداب خاصی انجام می‌شود این رسم به جشن مردگان نیز معروف است.\n
        بر اساس سنت رایج و باورهای مردم در زمان‌های قدیم فریدون پادشاه پیشدادی به خونخواهی پدرش جمشید شاه ضحاک پادشاه را در سرزمین مازندران و در دماوند کوه به بند می‌کشد، مردم خبر این پیروزی را در شب با آتش زدن بوته‌ها به یکدیگر اطلاع می‌دهند؛ \n
        و فردای آن روز با برپایی جشن و مسابقه کشتی این پیروزی را گرامی می‌دارند. \n
        امروزه نیز اهالی روستاهای اطراف همگی به امامزاده حسن می‌آیند و علاوه بر خیرات کردن برای اموات خود و روشن کردن شمع روی مزارها، تماشاگر مسابقه کشتی سنتی لوچو می‌شوند.\n
        در این روز کشتی گیران سوادکوه در این محوطه گرد می‌آیند و به مصاف هم می‌روند.\n
        در مناطق جلگه‌ای جشن مردگان در آرامگاه‌ها برگزار می‌شود\n

    </string>
    <string name="akhlaqi">خصوصیات اخلاقی مازندران</string>
    <string name="eteqadat">اعتقاد و باورهای مردم مازندران</string>
    <string name="makan_ziarati">مکان های زیارتی  مازندران</string>
    <string name="qaza">غذاهای محلی مازندران</string>
    <string name="shirini">شیرینی های محلی مازندران</string>
    <string name="ahang">آهنگ های محلی مازندران</string>
    <string name="film">فیلم محلی مازندران</string>
    <string name="about">درباره ما</string>
</resources>