<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/tarikhche"
              android:background="@drawable/shape_back_green"
              android:text="@string/tarikhche_title"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentLeft="true"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/marasem"
              android:background="@drawable/shape_back_green2"
              android:text="@string/marasem"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentRight="true"
              android:layout_below="@id/tarikhche"
              android:padding="16dp"/>



          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/akhlaqi"
              android:background="@drawable/shape_back_green"
              android:text="@string/akhlaqi"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentLeft="true"
              android:layout_below="@id/marasem"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/eteqadt"
              android:background="@drawable/shape_back_green2"
              android:text="@string/eteqadat"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentRight="true"
              android:layout_below="@id/akhlaqi"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/makan_ziarati"
              android:background="@drawable/shape_back_green"
              android:text="@string/makan_ziarati"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentLeft="true"
              android:layout_below="@id/eteqadt"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/qaza"
              android:background="@drawable/shape_back_green2"
              android:text="@string/qaza"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentRight="true"
              android:layout_below="@id/makan_ziarati"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/shirini"
              android:background="@drawable/shape_back_green"
              android:text="@string/shirini"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_below="@id/qaza"
              android:layout_alignParentLeft="true"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/ahang"
              android:background="@drawable/shape_back_green2"
              android:text="@string/ahang"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentRight="true"
              android:layout_below="@id/shirini"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/film"
              android:background="@drawable/shape_back_green"
              android:text="@string/film"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_below="@id/ahang"
              android:layout_alignParentLeft="true"
              android:padding="16dp"/>
          <Button
              android:layout_width="300dp"
              android:layout_height="70dp"
              android:id="@+id/about"
              android:background="@drawable/shape_back_green2"
              android:text="@string/about"
              android:textSize="14sp"
              android:textStyle="bold"
              android:textColor="@color/colorPrimaryText"
              android:layout_marginTop="16dp"
              android:layout_alignParentRight="true"
              android:layout_below="@id/film"
              android:padding="16dp"/>
      </RelativeLayout>
  </ScrollView>



</RelativeLayout>